--- a/V1ProyectoPOO/V1ProyectoPOO/Properties/Resources.resx
+++ b/V1ProyectoPOO/V1ProyectoPOO/Properties/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Cadena_Conexion" xml:space="preserve">
-    <value>Server=localhost;Database=PROYECTO17;Trusted_Connection=True;
+    <value>Server=localhost;Database=BaseProyectoV2;Trusted_Connection=True;
 </value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
